# bitrouter

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  Cargo.toml  DESIGN-agent-plugins.md  DEVELOPMENT.md  ONBOARDING_SPEC.md  README.md  SPAWN_SPEC.md  TUI_ACCEPTANCE.md  TUI_SPEC.md  TUI_SPEC_V3.md  TUI_V3_ACCEPTANCE.md  check_wallet.sh  cliff.toml  dist-workspace.toml  package-lock.json  package.json  pnpm-lock.yaml  release-plz.toml  release.toml  run_demo.sh  run_tests.sh
apps/bitrouter/: Cargo.toml
apps/bitrouter/src/: acp_cli.rs  agent_proxy.rs  agent_registry.rs  agents.rs  assemble.rs  claude_code.rs  cloud.rs  commands.rs  daemon.rs  error_report.rs  events.rs  fleet.rs  fleet_mcp.rs  gateways.rs  harness.rs  lib.rs  main.rs  onboarding.rs  paths.rs  policy_lock.rs  policy_table_router.rs  reload.rs  result_contract.rs  risk.rs  routing_preview.rs  session.rs  skills_query.rs  spawn.rs  style.rs  tools.rs  update.rs
apps/bitrouter/tests/: account_oauth.rs  acp.rs  cloud_api.rs  daemon.rs  e2e.rs  full_stack.rs  observe_hierarchy.rs  onboarding.rs  smithers_reward_loop.rs  subagent_budget_e2e.rs  terminus_2_workflow_state.rs  workflow_state_real_agent_e2e.rs  workflow_state_replay.rs
bitrouter/: Cargo.toml  README.md
bitrouter-a2a/: Cargo.toml  README.md
bitrouter-a2a/src/: admin.rs  card.rs  client.rs  config.rs  error.rs  file_registry.rs  filters.rs  jsonrpc.rs  lib.rs  message.rs  registry.rs  request.rs  security.rs  server.rs  stream.rs  task.rs
bitrouter-a2a/src/client/: a2a_client.rs  mod.rs  registry.rs  upstream.rs
bitrouter-a2a/src/server/: mod.rs
bitrouter-a2a/src/transports/: http.rs  jsonrpc.rs  mod.rs
bitrouter-a2a/src/types/: mod.rs
bitrouter-a2a/tests/: a2a_v030_integration.rs
bitrouter-accounts/: Cargo.toml  README.md
bitrouter-accounts/src/: identity.rs  lib.rs
bitrouter-accounts/src/entity/: account.rs  api_key.rs  message.rs  mod.rs  revoked_key.rs  rotated_pubkey.rs  session.rs  session_file.rs  virtual_key.rs
bitrouter-accounts/src/filters/: accounts.rs  mod.rs  sessions.rs
bitrouter-accounts/src/migration/: m20260310_000001_create_accounts.rs  m20260310_000002_create_api_keys.rs  m20260310_000003_create_sessions.rs  m20260310_000004_create_messages.rs  m20260310_000005_create_session_files.rs  m20260311_000006_jwt_auth.rs  mod.rs  (+2 more)
bitrouter-acp/: Cargo.toml  README.md
bitrouter-acp/examples/: shim_smoke.rs
bitrouter-acp/src/: client.rs  connection.rs  eager.rs  install.rs  lib.rs  ops.rs  platform.rs  proxy.rs  state.rs
bitrouter-anthropic/: Cargo.toml  README.md
bitrouter-anthropic/src/: lib.rs
bitrouter-api/: Cargo.toml  README.md
bitrouter-api/src/: accounts.rs  body.rs  error.rs  fallback.rs  guardrails.rs  lib.rs  metrics.rs  observe.rs  util.rs
bitrouter-api/tests/: agent_api_surface.rs
bitrouter-auth/: Cargo.toml
bitrouter-auth/src/: lib.rs
bitrouter-blob/: Cargo.toml  README.md
bitrouter-blob/src/: fs.rs  lib.rs
bitrouter-cli/: Cargo.toml
bitrouter-cli/src/: init.rs  main.rs
bitrouter-config/: Cargo.toml  README.md
bitrouter-config/providers/: anthropic.yaml  bitrouter-cloud.yaml  bitrouter-node.yaml  google.yaml  moonshot.yaml  openai.yaml  openrouter.yaml
bitrouter-config/signals/: builtin.yaml
bitrouter-config/src/: acp.rs  agent.rs  agent_registry.rs  agent_routing.rs  compat.rs  config.rs  content_routing.rs  detect.rs  env.rs  error.rs  lib.rs  model.rs  presets.rs  registry.rs  routing.rs  skill.rs  telemetry.rs  tool.rs  writer.rs
bitrouter-config/templates/: full.yaml  minimal.yaml
bitrouter-config/tests/: agent_routing_e2e.rs
bitrouter-core/: Cargo.toml  README.md
bitrouter-core/src/: blob.rs  errors.rs  lib.rs  observe.rs  policy.rs  pricing.rs  sync.rs
bitrouter-google/: Cargo.toml  README.md
bitrouter-guardrails/: Cargo.toml  README.md
bitrouter-guardrails/src/: agent_config.rs  agent_engine.rs  agent_router.rs  config.rs  engine.rs  guarded_model.rs  guarded_tool_provider.rs  lib.rs  pattern.rs  router.rs  rule.rs  tool.rs  tool_config.rs  tool_engine.rs  tool_router.rs
bitrouter-mcp/: Cargo.toml  README.md
bitrouter-mcp/src/: admin.rs  bridge.rs  config.rs  error.rs  groups.rs  lib.rs  param_filter.rs
bitrouter-observe/: Cargo.toml  README.md
bitrouter-observe/src/: agent_observer.rs  builder.rs  composite.rs  cost.rs  lib.rs  metrics.rs  model_observer.rs  observer.rs  tool_observer.rs
bitrouter-openai/: Cargo.toml  README.md
bitrouter-openai/src/: chat.rs  responses.rs
bitrouter-p2p/: Cargo.toml  README.md
bitrouter-p2p/examples/: test_peer.rs
bitrouter-p2p/src/: client.rs  direct.rs  endpoint.rs  frame.rs  identity_store.rs  inbound.rs  lib.rs  node.rs
bitrouter-p2p/tests/: direct_local.rs  p2p_latency.rs  p2p_tunnel.rs  primitives_envelope.rs  primitives_vectors.rs
bitrouter-providers/: Cargo.toml  README.md
bitrouter-providers/src/: lib.rs  util.rs
bitrouter-runtime/: Cargo.toml  README.md
bitrouter-runtime/src/: app.rs  auth.rs  config.rs  control.rs  error.rs  keys.rs  lib.rs  paths.rs  registry.rs  router.rs  routing.rs  server.rs
bitrouter-seaorm/: Cargo.toml
bitrouter-seaorm/src/: lib.rs
bitrouter-sessions/: Cargo.toml
bitrouter-sessions/src/: lib.rs
bitrouter-skills/: Cargo.toml  README.md
bitrouter-skills/src/: lib.rs  registry.rs  skill.rs
bitrouter-tui/: Cargo.toml  README.md
bitrouter-tui/src/: app.rs  config.rs  error.rs  event.rs  input.rs  lib.rs  model.rs  render.rs
bitrouter-warp-router/: Cargo.toml
bitrouter-warp-router/src/: error.rs  lib.rs
bitrouter/src/: accounts.rs  init.rs  lib.rs  main.rs  providers.rs
bitrouter/src/cli/: a2a.rs  (+22 more)
bitrouter/templates/: home_readme.md  minimal.yaml
bitrouter/tests/: openrouter_live.rs
crates/bitrouter-attestation/: Cargo.toml
crates/bitrouter-bedrock/: Cargo.toml
mcp/: Cargo.toml  README.md
mcp/examples/: mcp-stdio-local.rs
mcp/src/: install.rs  lib.rs  server.rs
mcp/tests/: install_write.rs  multitenant_http.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+1439 files in other folders)
