[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
# gui-only:
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }   # genai runtime
alacritty_terminal = "0.26"
genai = "0.6"
# NOTE (Task 2.1): pin gpui + gpui-component to a MATCHING pair — reuse the exact
# `gpui` rev that gpui-component's own Cargo.toml depends on, so there is exactly
# one gpui in the tree. Fill REV_GPUI / REV_GPUIC during 2.1.
gpui = { git = "https://github.com/zed-industries/zed", rev = "REV_GPUI" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "REV_GPUIC" }
