[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
# gui-only:
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }   # genai runtime
alacritty_terminal = "0.26"
genai = "0.6"
# NOTE (Task 2.1): pin gpui + gpui-component to a MATCHING pair — reuse the exact
# `gpui` rev that gpui-component's own Cargo.toml depends on, so there is exactly
# one gpui in the tree. Fill REV_GPUI / REV_GPUIC during 2.1.
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
# MUST match gpui-component's own gpui_platform features — `font-kit` is the font
# loading/rasterization backend; without it quads render but text glyphs never
# rasterize (blank text). `runtime_shaders`/x11/wayland mirror gpui-component too.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "a0ae3a37b960b732801782dd8c27cb993ff57b59" }
