[package]
name = "bitrouter-a2a"
version = { workspace = true }
edition = "2024"
description = "A2A (Agent-to-Agent) protocol types, registry, and discovery endpoints for BitRouter"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1" }
warp = { version = "0.4" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
warp = { version = "0.4", features = ["test"] }
tempfile = { version = "3" }
