[package]
name = "bitrouter-accounts"
version = { workspace = true }
edition = "2024"
description = "BitRouter account and session management"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.2" }
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1", features = ["v4", "serde"] }
warp = { version = "0.4.2" }
