[package]
name = "bitrouter-api"
version = { workspace = true }
edition = "2024"
description = "BitRouter API - reusable warp server components for AI model routing"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = ["openai", "anthropic", "google"]
openai = ["bitrouter-openai"]
anthropic = ["bitrouter-anthropic"]
google = ["bitrouter-google"]
mpp-tempo = ["dep:mpp", "mpp/tempo", "mpp/server", "dep:bitrouter-config"]

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.12" }
bitrouter-config = { path = "../bitrouter-config", version = "0.12", optional = true }
bitrouter-openai = { path = "../bitrouter-openai", version = "0.12", optional = true }
bitrouter-anthropic = { path = "../bitrouter-anthropic", version = "0.12", optional = true }
bitrouter-google = { path = "../bitrouter-google", version = "0.12", optional = true }
futures-core = { version = "0.3" }
mpp = { git = "https://github.com/tempoxyz/mpp-rs", default-features = false, features = [
    "reqwest-rustls-tls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
warp = { version = "0.4" }

[dev-dependencies]
regex = { version = "1.12" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.4", features = ["test"] }
