[package]
name = "bitrouter-api"
version = { workspace = true }
edition = "2024"
description = "BitRouter API - reusable warp server components for AI model routing"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = ["openai", "anthropic", "google"]
openai = []
anthropic = []
google = []
mpp-tempo = ["dep:mpp", "mpp/tempo", "mpp/server", "dep:bitrouter-config"]
mpp-solana = [
    "dep:mpp",
    "mpp/server",
    "dep:bitrouter-config",
    "bitrouter-config/mpp-solana",
    "dep:ed25519-dalek",
    "dep:bs58",
    "dep:time",
]

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.12" }
bitrouter-config = { path = "../bitrouter-config", version = "0.12", optional = true }
bitrouter-a2a = { path = "../bitrouter-a2a", version = "0.12" }
bitrouter-mcp = { path = "../bitrouter-mcp", version = "0.12" }
futures-core = { version = "0.3" }
mpp = { git = "https://github.com/tempoxyz/mpp-rs", default-features = false, features = [
    "reqwest-rustls-tls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ed25519-dalek = { version = "2", features = ["std"], optional = true }
bs58 = { version = "0.5", optional = true }
time = { version = "0.3", features = [
    "formatting",
    "parsing",
], optional = true }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { version = "0.1" }
warp = { version = "0.4" }

[dev-dependencies]
bitrouter-a2a = { path = "../bitrouter-a2a", version = "0.12" }
regex = { version = "1.12" }
tempfile = { version = "3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.4", features = ["test"] }
