[package]
name = "bitrouter-api"
version = { workspace = true }
edition = "2024"
description = "BitRouter API - reusable warp server components for AI model routing"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = ["openai", "anthropic", "google", "mcp"]
mcp = []
openai = []
anthropic = []
google = []
mpp-tempo = [
    "dep:mpp",
    "mpp/tempo",
    "mpp/server",
    "dep:bitrouter-config",
    "dep:alloy",
    "dep:tempo-primitives",
    "dep:tempo-alloy",
]
mpp-solana = [
    "dep:mpp",
    "mpp/server",
    "dep:bitrouter-config",
    "bitrouter-config/mpp-solana",
    "dep:ed25519-dalek",
    "dep:bs58",
    "dep:time",
]

[dependencies]
bitrouter-core.workspace = true
bitrouter-config = { workspace = true, optional = true }
async-trait = { version = "0.1" }
futures-core = { version = "0.3" }
mpp = { package = "mpp-br", version = "0.8.1", default-features = false, features = [
    "reqwest-rustls-tls",
], optional = true }
alloy = { version = "1", default-features = false, features = [
    "signers",
    "sol-types",
    "consensus",
    "providers",
    "network",
    "eips",
], optional = true }
tempo-primitives = { version = "1", optional = true }
tempo-alloy = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ed25519-dalek = { version = "2", features = ["std"], optional = true }
bs58 = { version = "0.5", optional = true }
time = { version = "0.3", features = [
    "formatting",
    "parsing",
], optional = true }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { version = "0.1" }
warp = { version = "0.4" }

[dev-dependencies]
regex = { version = "1.12" }
tempfile = { version = "3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.4", features = ["test"] }
