[package]
name = "bitrouter-config"
version = { workspace = true }
edition = "2024"
description = "BitRouter configuration, provider registry, and routing table"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = []
payments-solana = []

[dependencies]
bitrouter-core.workspace = true
bitrouter-guardrails.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-saphyr = { version = "0.0" }
thiserror = { version = "2.0" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
