[package]
name = "bitrouter-core"
version = { workspace = true }
edition = "2024"
description = "BitRouter core"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[dependencies]
alloy-primitives = { version = "1" }
alloy-signer = { version = "1" }
alloy-signer-local = { version = "1" }
base64 = { version = "0.22" }
bs58 = { version = "0.5" }
dynosaur = "0.3.0"
futures-core = { version = "0.3" }
http = { version = "1.4" }
rand = { version = "0.9" }
regex = { version = "1.12" }
schemars = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
solana-keypair = { version = "3.1" }
solana-pubkey = { version = "4.1" }
solana-signature = { version = "3", features = ["verify"] }
solana-signer = { version = "3.0" }
thiserror = { version = "2.0" }
tokio-util = { version = "0.7" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1" }
