[package]
name = "bitrouter-guardrails"
version = { workspace = true }
edition = "2024"
description = "BitRouter guardrails — local firewall for AI agent traffic at the proxy layer"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.12" }
futures-core = { version = "0.3" }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }

[dev-dependencies]
serde_yaml = { version = "0.9" }
