[package]
name = "bitrouter-guardrails"
version = { workspace = true }
edition = "2024"
description = "BitRouter guardrails — local firewall for AI agent traffic at the proxy layer"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.18" }
futures-core = { version = "0.3" }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1" }

[dev-dependencies]
serde-saphyr = { version = "0.0" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
