[package]
name = "bitrouter-mcp"
version = { workspace = true }
edition = "2024"
description = "MCP types, config, and traits for BitRouter — lightweight protocol library"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"

[features]
default = []
client-stdio = ["dep:rmcp"]

[dependencies]
bitrouter-core = { path = "../bitrouter-core", version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
tracing = { version = "0.1" }

# Stdio transport (optional) — enables child-process MCP connections via rmcp
rmcp = { version = "1.2", optional = true, features = [
    "client",
    "server",
    "transport-child-process",
] }
