[package]
name = "bitrouter-observe"
version = { workspace = true }
edition = "2024"
description = "BitRouter observability - spend tracking, metrics, and request observation"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[features]
default = ["sqlite", "postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]

# Enables the OTLP/HTTP exporter. The exporter emits OpenTelemetry GenAI
# semantic-convention spans built from the existing observer callbacks.
# In this layer the export step writes a structured `tracing` event per span;
# the actual `opentelemetry-otlp` HTTP transport lands in a follow-up commit
# so the API surface and pipeline can be reviewed and tested in isolation.
otlp = []

[dependencies]
bitrouter-core.workspace = true
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1" }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
