[package]
name = "bitrouter-openai"
version = "0.1.5"
edition = "2024"
description = "BitRouter OpenAI Adapter"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "README.md"

[dependencies]
base64 = { version = "0.22" }
bitrouter-core = { path = "../bitrouter-core", version = "0.1" }
bytes = { version = "1" }
regex = { version = "1.12" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
schemars = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }
