[package]
name = "bitrouter-p2p"
version = { workspace = true }
edition = "2024"
description = "BitRouter P2P networking and protocol primitives"
authors = ["Archer <archer@bitrouter.ai>"]
license = "Apache-2.0"
repository = "https://github.com/bitrouter/bitrouter"
readme = "../README.md"

[dependencies]
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["std"] }
iroh = "=0.92.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
